--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^3.8.2",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@nuxt/image": "^1.1.0",
+    "@nuxt/ui": "^2.11.1"
   }
 }
