Pinia & Login Register

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@nuxt/image": "^1.1.0",
     "@nuxt/ui": "^2.11.1",
-    "appwrite": "^13.0.1"
+    "@pinia/nuxt": "^0.5.1",
+    "appwrite": "^13.0.1",
+    "pinia": "^2.1.7"
   }
 }
