Drag deals and Slideover

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@tanstack/vue-query": "^5.15.0",
     "appwrite": "^13.0.1",
+    "dayjs": "^1.11.10",
     "pinia": "^2.1.7"
   }
 }
